fixed text align

--- a/src/components/Content/Content.module.sass
+++ b/src/components/Content/Content.module.sass
@@ -3,7 +3,8 @@ section
     min-height: calc(70vh - 20px)
     display: flex
     flex-flow: column
-    text-align: center
+    .NotFoundText
+        text-align: center
     .FaceIcon
         margin: 7% auto
         
